feat: adding subscription guards
